[svn r15468] Fixed unvisible fonts in header1 in installation process

--- a/main/css/public_admin/default.css
+++ b/main/css/public_admin/default.css
@@ -174,7 +174,7 @@ input[text] {font-size: 12px; }
 	font-size: 12px;
 	padding: 4px;
 	background-color: #4475B0;
-	color: #666;
+	color: #fff;
 	height: 35px;
 	background-image: url(images/TGSS_header.jpg);
     	Background-repeat: no-repeat;
